Organize files, update readme, add image

--- a/.cproject
+++ b/.cproject
@@ -43,6 +43,7 @@
 								</option>
 								<option id="com.ti.ccstudio.buildDefinitions.MSP432_18.1.compilerID.INCLUDE_PATH.898303907" name="Add dir to #include search path (--include_path, -I)" superClass="com.ti.ccstudio.buildDefinitions.MSP432_18.1.compilerID.INCLUDE_PATH" valueType="includePath">
 									<listOptionValue builtIn="false" value="${TI_PRODUCTS_DIR}/msp432_driverlib_3_21_00_05/driverlib/MSP432P4xx"/>
+									<listOptionValue builtIn="false" value="${PROJECT_ROOT}/src"/>
 									<listOptionValue builtIn="false" value="${CCS_BASE_ROOT}/arm/include"/>
 									<listOptionValue builtIn="false" value="${PROJECT_ROOT}/system"/>
 									<listOptionValue builtIn="false" value="${CCS_BASE_ROOT}/arm/include/CMSIS"/>
